@@ -8,6 +8,7 @@ v7.9.0
   - Add scroll up/down buttons for better mobile experience with large build traces
   - Add runner last contact (Kamil Trzciński)
   - Allow to pause runners - when paused runner will not receive any new build (Kamil Trzciński)
+  - Add brakeman (security scanner for Ruby on Rails)
 
 v7.8.2
   - Fix the broken build failed email
